// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radio > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__17da2jl4 styles__17da2jl2"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-disabled="false"
          class="styles__17da2jla"
          id="_r_0_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_0_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="false"
        class="styles_small__17da2jl3 styles__17da2jl2"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-describedby="_r_v_"
          aria-disabled="false"
          class="styles__17da2jla"
          id="_r_u_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="8"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <label
          class="styles_small__17da2jl6 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_u_"
        >
          Choice
        </label>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_v_"
        role="status"
      >
        Helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__17da2jl4 styles__17da2jl2"
        data-checked="true"
        data-invalid="false"
      >
        <input
          aria-disabled="false"
          checked=""
          class="styles__17da2jla"
          id="_r_g_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_g_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="true"
        class="styles_medium__17da2jl4 styles__17da2jl2"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-disabled="true"
          class="styles__17da2jla"
          disabled=""
          id="_r_4_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_4_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__17da2jl4 styles__17da2jl2"
        data-checked="false"
        data-invalid="true"
      >
        <input
          aria-describedby="_r_l_"
          aria-disabled="false"
          class="styles__17da2jla"
          id="_r_k_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_k_"
        >
          Choice
        </label>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_l_"
        role="status"
      >
        Invalid value
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__17da2jl4 styles__17da2jl2"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-describedby="_r_q_"
          aria-disabled="false"
          class="styles__17da2jla"
          id="_r_p_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_p_"
        >
          Choice
        </label>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_q_"
        role="status"
      >
        Helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_a_"
      aria-describedby="_r_a_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
      >
        <div
          aria-disabled="false"
          class="styles_medium__17da2jl4 styles__17da2jl2"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            class="styles__17da2jla"
            id="_r_8_"
            name="radio"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jlb"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="styles__17da2jle"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jld"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jlc"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_8_"
          >
            Choice
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders without name 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        aria-disabled="true"
        class="styles_medium__17da2jl4 styles__17da2jl2"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-disabled="true"
          class="styles__17da2jla"
          disabled=""
          id="_r_c_"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jlb"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__17da2jle"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jld"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jlc"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_c_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
